Fixed mb_send_mail() so that Content-Type and Content-Transfer-Encoding headers are overridable by additional header parameters. This patch fixes bug #21985 and bug #22064.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@116969 c90b9560-bf6c-de11-be94-00142212c4b1